# assembien

./: .env.example  .gitignore  README.md  package-lock.json  package.json  tsconfig.base.json  tsconfig.browser.json  tsconfig.json  tsconfig.node.json  vitest.config.ts
apps/desktop/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx  assem-orb.test.tsx  assem-orb.tsx  assistant-core.test.tsx  assistant-core.tsx  assistant-panels.test.tsx  assistant-panels.tsx  audio-recorder.test.ts  audio-recorder.ts  conversation-pane.test.tsx  conversation-pane.tsx  runtime-display.test.ts  runtime-display.ts  styles.css  surface.test.tsx  surface.tsx  voice-orb.test.tsx  voice-orb.tsx  voice-ui.test.ts  voice-ui.ts  wake-mode-loop.test.ts  (+1 more)
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/local-agent/: README.md  package.json
docs/: assem-product-charter.md  browser-automation.md  desktop-tauri.md  desktop-voice.md  interrupt-handler.md  local-agent-api.md  ollama-local-setup.md  planner.md  research.md  task-manager.md  task-runtime.md
docs/architecture/: mvp-overview.md  runtime-services.md
integrations/calendar/: README.md  package.json
integrations/clock-time/: README.md  package.json
integrations/local-files/: README.md  package.json
integrations/web-page-reader/: package.json
integrations/web-search/: package.json
providers/demo-local/: README.md  package.json
providers/ollama/: package.json
scripts/: bootstrap-whisper-runtime.ts  doctor-voice.ts
(+21 files in other folders)
