[package]
name = "assem_desktop"
version = "0.1.0"
description = "ASSEM desktop shell"
authors = ["ASSEM"]
edition = "2021"

[lib]
name = "assem_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
